--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@ body {
 	/* rotation  -100deg #FFDEBF 0, #fff 0.4, #FFFADD 0.7 */
 	background: linear-gradient(40deg, #ffdebf 0, #fffcf0 40%, #fffadd 70%);
 	height: 100%;
+	cursor: none;
 }
 
 #webgl {
@@ -39,5 +40,32 @@ body {
 	}
 	to {
 		rotate: 359deg;
+	}
+}
+
+.paper {
+	visibility: hidden;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 1000px;
+	height: 300px;
+	color: black;
+	font-size: 32px;
+	font-weight: 600;
+	display: flex;
+	flex-direction: column;
+
+	.content {
+		flex: 1;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
+	.author {
+		text-align: right;
+		font-size: 24px;
 	}
 }
