--- a/src/style.css
+++ b/src/style.css
@@ -19,10 +19,12 @@ body {
 	top: 0;
 	left: 0;
 	outline: none;
+	opacity: 0;
 }
 
 .cursor {
 	/* display: none; */
+	pointer-events: none;
 	cursor: none;
 	user-select: none;
 	translate: -50% -50%;
@@ -30,7 +32,7 @@ body {
 	animation: cursor 5s infinite linear;
 }
 
-.cursor:active {
+*:active .cursor {
 	scale: 0.8;
 }
 
@@ -68,4 +70,37 @@ body {
 		text-align: right;
 		font-size: 24px;
 	}
+}
+
+#music_button {
+	position: fixed;
+	bottom: 45px;
+	right: 45px;
+	width: 90px;
+}
+
+.loader-container {
+	pointer-events: none;
+	position: fixed;
+	inset: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#loader {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 300px;
+}
+
+#button {
+	position: fixed;
+	bottom: 32px;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 200px;
+	/* height: 150px; */
 }
