--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,10 @@ body {
 
 .cursor-container {
 	pointer-events: none;
+
+	@media (max-width: 768px) {
+		display: none;
+	}
 }
 .cursor-container.hover {
 	.cursor {
@@ -100,6 +104,11 @@ body {
 	display: flex;
 	flex-direction: column;
 
+	@media (max-width: 768px) {
+		width: 300px;
+		height: 100px;
+	}
+
 	.content {
 		flex: 1;
 		display: flex;
@@ -159,4 +168,17 @@ body {
 
 .santa {
 	justify-self: start;
+}
+
+.permission-container {
+	position: fixed;
+	inset: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 24px;
+
+	@media (min-width: 768px) {
+		display: none;
+	}
 }
