--- a/src/style.css
+++ b/src/style.css
@@ -97,17 +97,14 @@ body {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	width: 1000px;
-	height: 300px;
+	height: 400px;
 	color: black;
-	font-size: 32px;
+	font-size: 48px;
 	font-weight: 600;
 	display: flex;
 	flex-direction: column;
-
-	@media (max-width: 768px) {
-		width: 300px;
-		height: 100px;
-	}
+	text-wrap: balance;
+	text-align: center;
 
 	.content {
 		flex: 1;
@@ -118,7 +115,17 @@ body {
 
 	.author {
 		text-align: right;
-		font-size: 24px;
+		font-size: 32px;
+	}
+
+	@media (max-width: 768px) {
+		width: 300px;
+		height: 130px;
+		font-size: 20px;
+
+		.author {
+			font-size: 18px;
+		}
 	}
 }
 
@@ -126,7 +133,15 @@ body {
 	position: fixed;
 	bottom: 45px;
 	right: 45px;
-	width: 90px;
+	width: 80px;
+	height: 80px;
+
+	@media (max-width: 768px) {
+		bottom: 24px;
+		right: 24px;
+		width: 40px;
+		height: 40px;
+	}
 }
 
 .loader-container {
