--- a/src/style.css
+++ b/src/style.css
@@ -179,6 +179,11 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+
+	@media (max-width: 768px) {
+		font-size: 120px;
+		word-break: break-all;
+	}
 }
 
 .santa {
