--- a/src/style.scss
+++ b/src/style.scss
@@ -152,8 +152,82 @@ body {
 	justify-content: center;
 	align-items: center;
 	background: var(--background-gradient);
+	> div {
+		position: relative;
+	}
+
+	.star1,
+	.star2,
+	.star3 {
+		position: absolute;
+		opacity: 0;
+	}
+
+	.star1 {
+		top: -65px;
+		left: 60px;
+		rotate: 10deg;
+	}
+
+	.star2 {
+		scale: 0.8;
+		top: -40px;
+		left: -45px;
+		rotate: 50deg;
+	}
+	.star3 {
+		scale: 0.5;
+		top: 50px;
+		left: -70px;
+		rotate: -15deg;
+	}
+
+	.loader-svg {
+		animation: pop-in 0.75s forwards cubic-bezier(0.34, 1.56, 0.64, 1);
+	}
+	.rotate-anim {
+		animation: rotate 0.75s cubic-bezier(0.34, 1.56, 0.64, 1) forwards;
+		transform-origin: center 60%;
+	}
+
+	.wave {
+		--wave-progress: 0;
+		animation: wave infinite 2s linear;
+		/* translate: 0; */
+
+		transform: translateY(calc(120% * (1 - var(--wave-progress))));
+	}
+}
+@keyframes wave {
+	from {
+		translate: 0;
+	}
+	to {
+		translate: -150px;
+	}
 }
 
+@keyframes pop-in {
+	from {
+		scale: 0;
+	}
+	to {
+		scale: 1;
+	}
+}
+
+@keyframes rotate {
+	from {
+		rotate: 0;
+	}
+	50% {
+		scale: 1.1;
+	}
+	to {
+		rotate: 40deg;
+		scale: 0;
+	}
+}
 #loader {
 	position: fixed;
 	top: 50%;
@@ -201,4 +275,9 @@ body {
 	@media (min-width: 768px) {
 		display: none;
 	}
+}
+
+.wave {
+	position: absolute;
+	clip-path: url(#clip);
 }
