--- a/src/style.scss
+++ b/src/style.scss
@@ -281,3 +281,40 @@ body {
 	position: absolute;
 	clip-path: url(#clip);
 }
+
+.paper-canvas {
+	z-index: 10;
+	position: fixed;
+	inset: 0;
+	pointer-events: none;
+
+	textarea {
+		cursor: none;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 1000px;
+		height: 500px;
+		display: none;
+		opacity: 0;
+		pointer-events: all;
+	}
+
+	input {
+		cursor: none;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 1000px;
+		height: 500px;
+		opacity: 0;
+		display: none;
+		pointer-events: all;
+	}
+
+	#paper {
+		visibility: hidden;
+	}
+}
