--- a/src/style.scss
+++ b/src/style.scss
@@ -2,6 +2,7 @@
 	font-family: 'Pangaia';
 	src: url(/fonts/PPPangaia-Medium.woff2) format('woff2');
 }
+
 @font-face {
 	font-family: 'Pangaia';
 	src: url(/fonts/PPPangaia-MediumItalic.woff2) format('woff2');
@@ -44,6 +45,7 @@ body {
 		display: none;
 	}
 }
+
 .cursor-container.hover {
 	.cursor {
 		display: none;
@@ -63,8 +65,10 @@ body {
 	transition: scale 0.1s;
 	//animation: cursor 5s infinite linear;
 }
+
 .cursor-hover {
 	display: none;
+
 	circle {
 		scale: 1.1;
 		transform-origin: center center;
@@ -157,6 +161,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	background: var(--background-gradient);
+
 	> div {
 		position: relative;
 	}
@@ -180,6 +185,7 @@ body {
 		left: -45px;
 		rotate: 331deg;
 	}
+
 	.star3 {
 		scale: 0.5;
 		top: 20px;
@@ -190,6 +196,7 @@ body {
 	.loader-svg {
 		animation: pop-in 0.75s forwards cubic-bezier(0.34, 1.56, 0.64, 1);
 	}
+
 	.rotate-anim {
 		animation: rotate 0.75s cubic-bezier(0.34, 1.56, 0.64, 1) forwards;
 		transform-origin: center 60%;
@@ -203,6 +210,7 @@ body {
 		transform: translateY(calc(120% * (1 - var(--wave-progress))));
 	}
 }
+
 @keyframes wave {
 	from {
 		translate: 0;
@@ -233,6 +241,7 @@ body {
 		scale: 0;
 	}
 }
+
 #loader {
 	position: fixed;
 	top: 50%;
@@ -323,6 +332,7 @@ body {
 		visibility: hidden;
 	}
 }
+
 h1 {
 	position: fixed;
 	top: 32px;
@@ -331,5 +341,70 @@ h1 {
 	color: black;
 	font-family: var(--title-font), serif;
 	z-index: 1;
+}
 
+.buttons-container {
+	position: fixed;
+	bottom: 32px;
+	left: 50%;
+	transform: translateX(-50%);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 8px;
+
+	.secondary-button {
+		background: transparent;
+		color: #1D1D1D;
+		display: none;
+	}
+
+	> button {
+		padding: 20px 24px;
+		background: #1D1D1D;
+		color: white;
+		border: 2px solid #1D1D1D;
+		border-radius: 48px;
+		font-family: var(--title-font), serif;
+		transition: .5s;
+		font-size: 15px;
+		position: relative;
+		cursor: none;
+
+		&:before, &:after {
+			content: url("/star.svg");
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: -1;
+			rotate: -30deg;
+			transition: .5s;
+			scale: 0.5;
+			opacity: 0;
+		}
+
+		&:after {
+			top: auto;
+			bottom: 0;
+			left: auto;
+			right: 0;
+			rotate: 30deg;
+		}
+
+		&:hover {
+			background: #FF3232;
+			color: white;
+			border: 2px solid #FF1818;
+			&::before {
+				transform: translateY(-60px);
+				opacity: 1;
+			}
+			&:after {
+				transform: translate(60px, 40px);
+				opacity: 1;
+			}
+		}
+		//before after on hover movement
+
+	}
 }
