--- a/src/style.scss
+++ b/src/style.scss
@@ -26,7 +26,7 @@ body {
 	font-family: sans-serif;
 	color: white;
 	/* rotation  -100deg #FFDEBF 0, #fff 0.4, #FFFADD 0.7 */
-	background: var(--background-gradient);
+	background: radial-gradient(circle, rgb(255,50,50) -200%, rgb(255, 255, 255) 80%);
 	height: 100%;
 	cursor: none;
 }
@@ -40,6 +40,8 @@ body {
 
 .cursor-container {
 	pointer-events: none;
+	z-index: 2;
+	position: relative;
 
 	@media (max-width: 768px) {
 		display: none;
@@ -160,7 +162,8 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: var(--background-gradient);
+	background: #FFEEE7;
+	z-index: 1;
 
 	> div {
 		position: relative;
@@ -262,16 +265,39 @@ body {
 .big-title {
 	position: fixed;
 	inset: 0;
-	font-size: 300px;
-	font-family: var(--title-font);
+	background: #FFEEE7;
+	z-index: 1;
 	display: flex;
-	align-items: center;
 	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	gap: 50px;
+	mask: url(/star.svg) center/contain no-repeat, linear-gradient(#000 0 0);
+	mask-composite: exclude;
+	mask-size: .1%;
 
-	@media (max-width: 768px) {
-		font-size: 120px;
-		word-break: break-all;
+	.status{
+		display: flex;
+		gap: 4px;
 	}
+
+	.titles {
+		font-family: var(--title-font), serif;
+		font-style: italic;
+		font-size: 96px;
+		color: #1D1D1D;
+		display: grid;
+		grid-template-columns: 1fr;
+		grid-template-rows: 1fr;
+		text-align: center;
+		text-wrap: balance;
+		align-items: center;
+		> * {
+			grid-column: 1;
+			grid-row: 1;
+		}
+	}
+
 }
 
 .santa {
@@ -407,4 +433,45 @@ h1 {
 		//before after on hover movement
 
 	}
+}
+
+
+.finish{
+	position: fixed;
+	inset: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-family: var(--title-font), serif;
+	color: #1D1D1D;
+	visibility: hidden;
+	.center {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		gap: 24px;
+		font-size: 48px;
+		text-align: center;
+		text-wrap: balance;
+		h2 {
+			font-size: 96px;
+		}
+
+	}
+	.credits {
+		position: absolute;
+		bottom: 64px;
+		font-size: 24px;
+		a {
+			cursor: none;
+			color: #1D1D1D;
+			text-decoration: underline;
+			font-family: var(--title-font), serif;
+
+		}
+
+	}
+
+
 }
